# toolbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CTCOptions.cmake  CTDependencies.cmake  CTModule.cmake
modules/base/: CMakeLists.txt
modules/base/include/ct/base/: base.hpp
modules/base/include/ct/base/errors/: errors.hpp  result.hpp
modules/base/include/ct/base/logger/: logger.hpp
modules/base/include/ct/base/types/: types.hpp
modules/base/src/: placeholder.cpp
modules/gfx/: CMakeLists.txt
modules/gfx/backends/glfw/: glfw_window.cpp  glfw_window.hpp
modules/gfx/backends/vulkan/: vk_device.cpp  vk_device.hpp  vk_utils.cpp  vk_utils.hpp
modules/gfx/docs/: device.md
modules/gfx/include/ct/gfx/: gfx.hpp
modules/gfx/include/ct/gfx/api/: device.hpp  swapchain.hpp
modules/gfx/include/ct/gfx/engine/: camera.hpp  renderer.hpp
modules/gfx/include/ct/gfx/window/: window.hpp
modules/gfx/src/api/: device.cpp  swapchain.cpp
modules/gfx/src/engine/: camera.cpp  renderer.cpp
modules/gfx/src/window/: window.cpp
modules/math/: CMakeLists.txt  documentation.md
modules/math/include/ct/math/: math.hpp  types.hpp
modules/math/include/ct/math/common/: constants.hpp  functions.hpp
modules/math/include/ct/math/detail/: arithmetic.hpp
modules/math/include/ct/math/interop/: op.hpp  transform.hpp
modules/math/include/ct/math/mat/: base.hpp  format.hpp  functions.hpp  fwd.hpp  mat3.hpp  mat4.hpp
modules/math/include/ct/math/quat/: fwd.hpp  quat.hpp
modules/math/include/ct/math/vec/: base.hpp  format.hpp  functions.hpp  fwd.hpp  vec2.hpp  vec3.hpp  vec4.hpp
modules/math/src/: dummy.cpp
modules/vision/: CMakeLists.txt  camera.md
modules/vision/include/ct/vision/: vision.hpp
modules/vision/include/ct/vision/camera/: camera.hpp
modules/vision/include/ct/vision/media/: media.hpp
modules/vision/src/camera/: camera.cpp
modules/vision/src/media/: media.cpp
studio/: CMakeLists.txt
studio/src/: main.cpp
studio/src/core/: application.cpp  application.hpp
